[package]
name = "shasper-consensus"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Aura consensus algorithm for substrate"
edition = "2018"

[dependencies]
parity-codec = "3.0"
substrate-client = { git = "https://github.com/paritytech/substrate" }
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
primitives = { package = "shasper-primitives", path = "../primitives" }
runtime-support = { package = "srml-support", git = "https://github.com/paritytech/substrate" }
runtime-primitives = { package = "sr-primitives", git = "https://github.com/paritytech/substrate" }
runtime-version = { package = "sr-version", git = "https://github.com/paritytech/substrate" }
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate" }
consensus-primitives = { package = "shasper-consensus-primitives", path = "primitives" }
crypto = { package = "shasper-crypto", path = "../../crypto" }
runtime = { package = "shasper-runtime", path = "../runtime" }
futures = "0.1.17"
tokio = "0.1.7"
parking_lot = "0.4"
error-chain = "0.12"
log = "0.3"
service = { package = "substrate-service", git = "https://github.com/paritytech/substrate" }
consensus-common = { package = "substrate-consensus-common", git = "https://github.com/paritytech/substrate" }
network = { package = "substrate-network", git = "https://github.com/paritytech/substrate" }
transaction-pool = { package = "substrate-transaction-pool", git = "https://github.com/paritytech/substrate" }
basic-authorship = { package = "substrate-basic-authorship", git = "https://github.com/paritytech/substrate" }
aura-slots = { package = "substrate-consensus-aura-slots", git = "https://github.com/paritytech/substrate" }
inherents = { package = "substrate-inherents", git = "https://github.com/paritytech/substrate" }
casper = { path = "../casper" }
