[package]
name = "shasper-primitives"
version = "0.1.0"
authors = ["Parity Team <admin@parity.io>"]
edition = "2018"

[dependencies]
crypto = { package = "shasper-crypto", path = "../../crypto", default-features = false }
beacon = { path = "../../beacon", default-features = false, features = ["with-codec"] }

[features]
default = ["std"]
std = [
	"crypto/std",
	"beacon/std",
	"beacon/std-with-codec",
	"beacon/with-serde",
]
