[package]
name = "shasper-runtime"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parity-codec = { version = "3.2", default-features = false, features = ["derive"] }
parity-codec-derive = "3.0"
primitives = { package = "shasper-primitives", path = "../primitives", default-features = false }
substrate-primitives = { git = "https://github.com/paritytech/substrate", default-features = false }
substrate-client = { git = "https://github.com/paritytech/substrate", default-features = false }
inherents = { package = "substrate-inherents", git = "https://github.com/paritytech/substrate", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate", default-features = false }
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate", default-features = false }
runtime-support = { package = "srml-support", git = "https://github.com/paritytech/substrate", default-features = false }
runtime-primitives = { package = "sr-primitives", git = "https://github.com/paritytech/substrate", default-features = false }
runtime-version = { package = "sr-version", git = "https://github.com/paritytech/substrate", default-features = false }
consensus-primitives = { package = "shasper-consensus-primitives", path = "../consensus/primitives", default-features = false }
aura-primitives = { package = "substrate-consensus-aura-primitives", git = "https://github.com/paritytech/substrate", default-features = false }
rustc-hex = { version = "1.0", optional = true }
hex-literal = { version = "0.1.0", optional = true }
serde = { version = "1.0", optional = true, default-features = false }
serde_derive = { version = "1.0", optional = true }
keyring = { package = "substrate-keyring", git = "https://github.com/paritytech/substrate", optional = true }
ssz = { path = "../../utils/ssz", default-features = false }
ssz-derive = { path = "../../utils/ssz-derive" }
byteorder = { version = "1.2", default-features = false }
hash-db = { version = "0.11", default-features = false }
crypto = { package = "shasper-crypto", path = "../crypto", default-features = false }

[features]
default = ["std"]
std = [
	"hex-literal",
	"rustc-hex",
	"parity-codec/std",
	"primitives/std",
	"substrate-client/std",
	"substrate-primitives/std",
	"rstd/std",
	"runtime-io/std",
	"runtime-support/std",
	"runtime-primitives/std",
	"runtime-version/std",
	"consensus-primitives/std",
	"keyring",
	"serde_derive",
	"serde",
	"serde/std",
	"ssz/std",
	"byteorder/std",
	"hash-db/std",
	"crypto/std",
	"aura-primitives/std",
]
