[package]
name = "ff"
version = "0.4.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "Library for building and interfacing with finite fields"
documentation = "https://docs.rs/ff/"
homepage = "https://github.com/ebfull/ff"
license = "MIT/Apache-2.0"
repository = "https://github.com/ebfull/ff"

[dependencies]
byteorder = { version = "1", default-features = false }
rand = { version = "0.4", default-features = false }
ff_derive = { version = "0.3.0", path = "ff_derive", optional = true }

[features]
default = ["std"]
std = []
derive = ["ff_derive"]
