[package]
name = "ssz-derive"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "Apache-2.0"
description = "Derive function for simple serialization"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"

[dev-dependencies]
ssz = { path = "../ssz" }
